# VECTORDB-BRAIN

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_ORCHESTRATION_PLAN.md  AGENT_WORK_LOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Modelfile.pwsh  PROJECT-CHARTER.md  README.md  SECURITY.md  Start-Ollama.ps1  docker-compose.yml  package.json  pyproject.toml  pyrightconfig.json  scan-vectordb-staging.sh  setup-agent-orchestration.ps1  start-ollama-session.sh
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/: CODEOWNERS  dependabot.yml
devtools/: __init__.py  cors-repl.ps1  error-tracking-db.md  playwright-smoke.mjs  tree_struct_qdrant_directory.tree
docs/: architecture-colbert-multivector-proforma.dot  architecture-colbert-multivector-proforma.md  architecture-graphviz.md  benchmarking-playbook.md  brave-react-devtools-setup.md  content-sidecars.md  corpus-manifest-contract.md  data-curation-pipeline.md  dev-mailcatcher.md  developer-guide.md  github-security-and-claude-setup.md  implementation-roadmap-layered-architecture.md  ingestion-and-curation-architecture.md  internal-react-devtools-debugging-guide.md  layered-knowledge-architecture.md  meetingprepepisodiclearningreactivearchitecture.md  obsidian-export-to-omnikb.md  obsidian-templates-and-queries.md  obsidian-vault-conventions.md  ollama-typescript-debugger.md  performance-profiling-and-continuous-improvement.md  sample-data-evidence.md  security-hardening-guide.md  testing-framework.md  typescript-debug.py  user-operations-guide.md  (+1 more)
logs/: README.md
(+100 files in other folders)
