[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnikb"
version = "0.1.0"
description = "Local vector-enabled knowledge base for Docker Desktop."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "qdrant-client>=1.9.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.9",
  "pyvis (>=0.3.2,<0.4.0)"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
  "pre-commit>=3.7.0",
  "openpyxl>=3.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^tests/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "data"]
skips = ["B101"]
